fix: add sidebar z-index for priority visibility

--- a/blocks/sidebar/__list-link/sidebar__list-link.css
+++ b/blocks/sidebar/__list-link/sidebar__list-link.css
@@ -9,9 +9,7 @@
 }
 
 .sidebar__list-link:hover {
-    position: relative;
     width: 303px;
-    z-index: 10;
     background-color: rgba(255, 129, 45, 1);
     display: flex;
     gap: 20px;
