--- a/blocks/sidebar/sidebar.css
+++ b/blocks/sidebar/sidebar.css
@@ -2,4 +2,5 @@
     position: fixed;
     width: 70px;
     background-color: rgba(36, 54, 101, 1);
+    z-index: 100;
 }
